[package]
name = "cargo-wheel"
version = "0.2.0"
authors = ["Markus Klein <markus-klein@live.de>"]
license = "MIT"
description = "Use milksnake and cbindgen to generate python binding to your Rust crate."
repository = "https://github.com/pacman82/cargo-wheel.git"
edition = "2018"

[dependencies]
cargo = "0.32"
env_logger = "0.6"
structopt = "0.2"
cbindgen = "0.6"
mustache = "0.9"
serde = "1.0"
serde_derive = "1.0"
pathdiff = "0.1"