[package]
name = "cargo-wheel"
version = "0.2.2"
authors = ["Markus Klein"]
license = "MIT"
description = "Deprecated - Use milksnake and cbindgen to generate python binding to your Rust crate."
repository = "https://github.com/pacman82/cargo-wheel.git"
edition = "2021"

[dependencies]
cargo = "0.62.0"
env_logger = "0.9.0"
structopt = "0.3.26"
cbindgen = "0.24.1"
mustache = "0.9.0"
serde = "1.0.137"
serde_derive = "1.0.137"
pathdiff = "0.2.1"

# The `maintenance` table indicates the status of the maintenance of
# the crate. This may be used by a registry, but is currently not
# used by crates.io. See https://github.com/rust-lang/crates.io/issues/2437
# and https://github.com/rust-lang/crates.io/issues/2438 for more details.
#
# The `status` field is required. Available options are:
# - `actively-developed`: New features are being added and bugs are being fixed.
# - `passively-maintained`: There are no plans for new features, but the maintainer intends to
#   respond to issues that get filed.
# - `as-is`: The crate is feature complete, the maintainer does not intend to continue working on
#   it or providing support, but it works for the purposes it was designed for.
# - `experimental`: The author wants to share it with the community but is not intending to meet
#   anyone's particular use case.
# - `looking-for-maintainer`: The current maintainer would like to transfer the crate to someone
#   else.
# - `deprecated`: The maintainer does not recommend using this crate (the description of the crate
#   can describe why, there could be a better solution available or there could be problems with
#   the crate that the author does not want to fix).
# - `none`: Displays no badge on crates.io, since the maintainer has not chosen to specify
#   their intentions, potential crate users will need to investigate on their own.
maintenance = { status = "deprecated" }